Tested B2C endpoints: B2B Flow for Teacher and Uploads Added
