# routers/router.B2C.Authentication.js
@@ -1,27 +1,30 @@
 const { v4: uuidv4 } = require('uuid');
+const path = require('path');
 const bcrypt = require('bcrypt');
 const dotenv = require('dotenv');
 const { Router } = require('express');
-const signupMiddleware = require('./middleware/middleware.authentication');
 const {
-  SignUpModel,
-  LoginModel,
+  b2cSignupMiddleware,
+} = require('./middleware/middleware.authentication');
+const {
+  b2cSignUpModel,
+  b2cLoginModel,
 } = require('../data/models/model.authentication.js');
 const logger = require('../controllers/controller.logger.js');
-
-const router = Router();
 
 require('dotenv').config();
 dotenv.config({ path: path.join(__dirname, '..', 'configs', '.env') });
 
-const bcryptSalt = bcrypt.genSaltSync(process.env.BCRYPT_SALT);
+const bcryptSalt = bcrypt.genSaltSync(parseInt(process.env.BCRYPT_SALT));
 
-router.post('/sign-up', signupMiddleware, async (req, res) => {
+const router = Router();
+
+router.post('/sign-up', b2cSignupMiddleware, async (req, res) => {
   const { studentName, schoolName, grade, state, country, email, password } =
     req.body;
 
   try {
-    const user = await LoginModel.findOne({ email: email });
+    const user = await b2cLoginModel.findOne({ email: email });
     if (user) {
       res.status(409).json({ error: 'User already exists in the db.' });
     } else {
@@ -33,14 +36,14 @@ router.post('/sign-up', signupMiddleware, async (req, res) => {
 
       const hashedPassword = bcrypt.hashSync(password, bcryptSalt);
 
-      const newUser = await SignUpModel({
+      const newUser = await b2cSignUpModel({
         studentName,
         schoolName,
         grade,
         state,
         country,
         email,
-        hashedPassword,
+        password: hashedPassword,
         verificationMeta: verificationMeta,
       });
       await newUser.save();
@@ -54,6 +57,10 @@ router.post('/sign-up', signupMiddleware, async (req, res) => {
     logger.warn(
       `Error found while doing db operations: ${error.stack.toString()}`
     );
+    res.status(400).json({
+      error: 'Error while doing db operation',
+      trace: error.stack.toString(),
+    });
   }
 });
 
@@ -61,7 +68,7 @@ router.post('/verify', async (req, res) => {
   const verificationId = req.query.verificationId;
   logger.info(`Verification Id : ${verificationId}`);
   try {
-    const user = await SignUpModel.findOneAndUpdate(
+    const user = await b2cSignUpModel.findOneAndUpdate(
       {
         'verificationMeta.verificationId': verificationId,
       },
@@ -75,7 +82,7 @@ router.post('/verify', async (req, res) => {
       logger.info('User entry exists for the verification Id');
 
       try {
-        const loginUser = LoginModel({
+        const loginUser = b2cLoginModel({
           email: user.email,
           password: user.password,
         });
@@ -99,15 +106,16 @@ router.post('/verify', async (req, res) => {
 
 router.post('/login', async (req, res) => {
   const { email, password } = req.body;
-  const user = await LoginModel.findOne({ email: email });
-  const passwordMatch = bcrypt.compareSync(password, hashedPassword);
-  logger.info(`User found: ${user}`);
+  const user = await b2cLoginModel.findOne({ email: email });
+  const passwordMatch = bcrypt.compareSync(password, user.password);
+
   if (!user) {
     res.status(400).json({ error: 'Email not present in the database.' });
   }
   if (!passwordMatch) {
     res.status(400).json({ error: 'User found but password is not matching.' });
   }
+  logger.info(`User found: ${user}`);
   res.status(200).json({ success: 'Logged In' });
 });
 
