# swagger.yaml
@@ -12,7 +12,7 @@ tags:
     description: Authentication Endpoints for B2C
 
 paths:
-  /authentication/sign-up:
+  /b2c-authentication/sign-up:
     post:
       tags:
         - Authentication
@@ -61,7 +61,7 @@ paths:
               example:
                 success: Passed Middleware...
 
-  /authentication/verify:
+  /b2c-authentication/verify:
     post:
       tags:
         - Authentication
@@ -77,7 +77,7 @@ paths:
         202:
           description: Success
 
-  /authentication/login:
+  /b2c-authentication/login:
     post:
       tags:
         - Authentication
@@ -101,3 +101,213 @@ paths:
       responses:
         200:
           description: Success
+
+  /b2b-authentication/teacher-signup:
+    post:
+      tags:
+        - Authentication
+      summary: Create a new teacher account
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                teacherName:
+                  type: string
+                schoolName:
+                  type: string
+                grade:
+                  type: string
+                state:
+                  type: string
+                country:
+                  type: string
+                email:
+                  type: string
+                password:
+                  type: string
+              example:
+                teacherName: TeacherX
+                schoolName: Don Bosco
+                grade: 11
+                state: New Delhi
+                country: India
+                email: mr.x@donbosco.com
+                password: Mr.x@12345
+      responses:
+        '201':
+          description: Teacher created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: string
+                  link:
+                    type: string
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        '409':
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+  /b2b-authentication/teacher-verify:
+    post:
+      tags:
+        - Authentication
+      summary: Verify teacher account
+      parameters:
+        - in: query
+          name: verificationId
+          schema:
+            type: string
+      responses:
+        '202':
+          description: Teacher verified
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: string
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        '409':
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+  /b2b-authentication/teacher-login:
+    post:
+      tags:
+        - Authentication
+      summary: Login as a teacher
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+              example:
+                email: mr.x@donbosco.com
+                password: Mr.x@12345
+      responses:
+        '200':
+          description: Successful login
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: string
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+  /b2b-authentication/upload-students:
+    post:
+      tags:
+        - Authentication
+      summary: Upload student data in csv
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                csvFile:
+                  type: string
+                  format: binary
+      responses:
+        '200':
+          description: Data uploaded
+  /b2b-authentication/student-signup:
+    post:
+      tags:
+        - Authentication
+      summary: Create a new student account
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                # Define properties for student signup
+      responses:
+        '201':
+          description: Student created
+        # Define other possible responses
+  /b2b-authentication/student-verification:
+    post:
+      tags:
+        - Authentication
+      summary: Verify student account
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                # Define properties for student verification
+      responses:
+        '200':
+          description: Student verified
+        # Define other possible responses
+  /b2b-authentication/student-login:
+    post:
+      tags:
+        - Authentication
+      summary: Login as a student
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                # Define properties for student login
+      responses:
+        '200':
+          description: Successful login
+        # Define other possible responses
